--- a/Homework/Homework #1.ipynb
+++ b/Homework/Homework #1.ipynb
@@ -2,115 +2,118 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Q1"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import numpy as np"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "source": [
+    "np.__version__"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "'1.19.2'"
       ]
      },
-     "execution_count": 2,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 2
     }
    ],
-   "source": [
-    "np.__version__"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Q2"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import pandas"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "source": [
+    "pandas.__version__"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "'1.1.3'"
       ]
      },
-     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 4
     }
    ],
-   "source": [
-    "pandas.__version__"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "source": [
+    "import urllib.request\r\n",
+    "url = 'https://raw.githubusercontent.com/alexeygrigorev/mlbookcamp-code/master/chapter-02-car-price/data.csv'\r\n",
+    "filename = 'data.csv'\r\n",
+    "urllib.request.urlretrieve(url, filename)"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "('data.csv', <http.client.HTTPMessage at 0x1c70cc12400>)"
       ]
      },
-     "execution_count": 5,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 5
     }
    ],
-   "source": [
-    "import urllib.request\n",
-    "url = 'https://raw.githubusercontent.com/alexeygrigorev/mlbookcamp-code/master/chapter-02-car-price/data.csv'\n",
-    "filename = 'data.csv'\n",
-    "urllib.request.urlretrieve(url, filename)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "import pandas as pd\n",
+    "import pandas as pd\r\n",
     "df = pd.read_csv('data.csv')"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "source": [
+    "df.head()"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -279,25 +282,22 @@
        "4           28        18        3916  34500  "
       ]
      },
-     "execution_count": 7,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 7
     }
    ],
-   "source": [
-    "df.head()"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "scrolled": true
-   },
+   "source": [
+    " print(df[\"Make\"])"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "0            BMW\n",
       "1            BMW\n",
@@ -314,20 +314,21 @@
      ]
     }
    ],
-   "source": [
-    " print(df[\"Make\"])"
-   ]
+   "metadata": {
+    "scrolled": true
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "scrolled": false
-   },
+   "source": [
+    "dfnew = df[df['Make'] == 'BMW']  \r\n",
+    "print(dfnew)"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "      Make       Model  Year             Engine Fuel Type  Engine HP  \\\n",
       "0      BMW  1 Series M  2011  premium unleaded (required)      335.0   \n",
@@ -385,17 +386,19 @@
      ]
     }
    ],
-   "source": [
-    "df_new = df[df['Make'] == 'BMW']  \n",
-    "print(df_new)"
-   ]
+   "metadata": {
+    "scrolled": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "source": [
+    "dfnew.describe()"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -541,46 +544,42 @@
        "max     111.000000  137.000000      3916.0  141200.000000  "
       ]
      },
-     "execution_count": 10,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 10
     }
    ],
-   "source": [
-    "df_new.describe()"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Q4"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "source": [
+    "df_new2 = df[df['Year'] >= 2015]  \r\n",
+    "df_new2['Engine HP'].isnull().sum()"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "51"
       ]
      },
-     "execution_count": 11,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 11
     }
    ],
-   "source": [
-    "df_new2 = df[df['Year'] >= 2015]  \n",
-    "df_new2['Engine HP'].isnull().sum()"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Question 5\n",
     "\n",
@@ -591,23 +590,27 @@
     "Has it changed?\n",
     "\n",
     "Round both means before answering this questions. You can use the round function for that:"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "df[['Engine HP']] = df[['Engine HP']].fillna(value = 326.907186)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "source": [
+    "df.describe()"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -753,39 +756,35 @@
        "max      354.000000    137.000000   5657.000000  2.065902e+06  "
       ]
      },
-     "execution_count": 13,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 13
     }
    ],
-   "source": [
-    "df.describe()"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "source": [
+    "mean_hp_before = 326.907186\r\n",
+    "mean_hp_after = 249.835034\r\n",
+    "print(round(mean_hp_before))\r\n",
+    "print(round(mean_hp_after))"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "327\n",
       "250\n"
      ]
     }
    ],
-   "source": [
-    "mean_hp_before = 326.907186\n",
-    "mean_hp_after = 249.835034\n",
-    "print(round(mean_hp_before))\n",
-    "print(round(mean_hp_after))"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Question 6\n",
     "\n",
@@ -797,18 +796,20 @@
     "Invert XTX.\n",
     "What's the sum of all the elements of the result?\n",
     "Hint: if the result is negative, re-read the task one more time"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "scrolled": false
-   },
+   "source": [
+    "df_Rolls = df[df['Make'] == 'Rolls-Royce']  \r\n",
+    "print(df_Rolls)"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "              Make                   Model  Year             Engine Fuel Type  \\\n",
       "2921   Rolls-Royce                Corniche  2001  premium unleaded (required)   \n",
@@ -944,17 +945,20 @@
      ]
     }
    ],
-   "source": [
-    "df_Rolls = df[df['Make'] == 'Rolls-Royce']  \n",
-    "print(df_Rolls)"
-   ]
+   "metadata": {
+    "scrolled": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "source": [
+    "df_arry = df_Rolls[[\"Engine HP\", \"Engine Cylinders\", \"highway MPG\"]]\r\n",
+    "df_arry"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -1206,22 +1210,22 @@
        "11450      624.0              12.0           21"
       ]
      },
-     "execution_count": 16,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 16
     }
    ],
-   "source": [
-    "df_arry = df_Rolls[[\"Engine HP\", \"Engine Cylinders\", \"highway MPG\"]]\n",
-    "df_arry"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "source": [
+    "df_arry.drop_duplicates()\r\n",
+    "df_arry"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -1473,22 +1477,22 @@
        "11450      624.0              12.0           21"
       ]
      },
-     "execution_count": 17,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 17
     }
    ],
-   "source": [
-    "df_arry.drop_duplicates()\n",
-    "df_arry"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "source": [
+    "df_arry2 = df_arry.drop_duplicates(subset=['Engine HP','highway MPG'])\r\n",
+    "df_arry2"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -1572,31 +1576,30 @@
        "11448      624.0              12.0           21"
       ]
      },
-     "execution_count": 22,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 22
     }
    ],
-   "source": [
-    "df_arry2 = df_arry.drop_duplicates(subset=['Engine HP','highway MPG'])\n",
-    "df_arry2"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "X = df_arry2.to_numpy()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "source": [
+    "X"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "array([[325.,   8.,  15.],\n",
@@ -1608,21 +1611,22 @@
        "       [624.,  12.,  21.]])"
       ]
      },
-     "execution_count": 26,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 26
     }
    ],
-   "source": [
-    "X"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "source": [
+    "XT = X.transpose()\r\n",
+    "XT"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "array([[325., 563., 563., 563., 322., 453., 624.],\n",
@@ -1630,22 +1634,22 @@
        "       [ 15.,  19.,  21.,  20.,  15.,  19.,  21.]])"
       ]
      },
-     "execution_count": 27,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 27
     }
    ],
-   "source": [
-    "XT = X.transpose()\n",
-    "XT"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {},
+   "source": [
+    "XTX = np.dot(XT,X)\r\n",
+    "XTX"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "array([[1.754801e+06, 3.965600e+04, 6.519600e+04],\n",
@@ -1653,47 +1657,42 @@
        "       [6.519600e+04, 1.500000e+03, 2.454000e+03]])"
       ]
      },
-     "execution_count": 35,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 35
     }
    ],
-   "source": [
-    "XTX = np.dot(XT,X)\n",
-    "XTX"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Sum"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {},
+   "source": [
+    "Sum_Result = M_Results.sum()\r\n",
+    "Sum_Result"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "1970887.0"
       ]
      },
-     "execution_count": 36,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 36
     }
    ],
-   "source": [
-    "Sum_Result = M_Results.sum()\n",
-    "Sum_Result"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "**Questions 7**\n",
     "\n",
@@ -1702,44 +1701,49 @@
     "\n",
     "Multiply the inverse of XTX with the transpose of X, and then multiply the result by y. Call the result w.\n",
     "What's the value of the first element of w?."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 54,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "y = [1000, 1100, 900, 1200, 1000, 850, 1300]"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 55,
-   "metadata": {},
+   "source": [
+    "y = np.array(y)\r\n",
+    "y"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "array([1000, 1100,  900, 1200, 1000,  850, 1300])"
       ]
      },
-     "execution_count": 55,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 55
     }
    ],
-   "source": [
-    "y = np.array(y)\n",
-    "y"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 60,
-   "metadata": {},
+   "source": [
+    "TXTX = np.linalg.inv(XTX)\r\n",
+    "TXTX"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "array([[ 5.17815728e-05,  9.06587044e-04, -1.92984188e-03],\n",
@@ -1747,22 +1751,22 @@
        "       [-1.92984188e-03, -8.87084092e-02,  1.05900809e-01]])"
       ]
      },
-     "execution_count": 60,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 60
     }
    ],
-   "source": [
-    "TXTX = np.linalg.inv(XTX)\n",
-    "TXTX"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 61,
-   "metadata": {},
+   "source": [
+    "MResults = np.dot(TXTX,XT)\r\n",
+    "MResults"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "array([[-0.00486592,  0.00336507, -0.00049461,  0.00143523, -0.00139492,\n",
@@ -1773,67 +1777,63 @@
        "         0.07339609, -0.04480526]])"
       ]
      },
-     "execution_count": 61,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 61
     }
    ],
-   "source": [
-    "MResults = np.dot(TXTX,XT)\n",
-    "MResults"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 62,
-   "metadata": {
-    "scrolled": false
-   },
+   "source": [
+    "w = np.dot(MResults,y)\r\n",
+    "w"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "array([ 0.19989598, 31.02612262, 31.65378877])"
       ]
      },
-     "execution_count": 62,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 62
     }
    ],
-   "source": [
-    "w = np.dot(MResults,y)\n",
-    "w"
-   ]
+   "metadata": {
+    "scrolled": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 63,
-   "metadata": {
-    "scrolled": true
-   },
+   "source": [
+    "w[0]"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "0.19989598183185642"
       ]
      },
-     "execution_count": 63,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 63
     }
    ],
-   "source": [
-    "w[0]"
-   ]
+   "metadata": {
+    "scrolled": true
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
